welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:11: error: 'while' expected but 'if' found.
  if (baggels >= 3){
  ^Poucet:17: error: '(' expected but '}' found.
}
^