welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
while(!exitReached){
  var baggels: Int = 0
  
  do{
    forward()
    if (isOverBaggle()){
      baggels = baggels + 1
    }
  }
  
  if (baggels >= 3){
    left()
  }
  else{
    right()
  }while (!crossing()) 
}

forward()